--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^1.20.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "debug": "^4.3.4",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "forwarded": "^0.2.0",
@@ -23,10 +24,13 @@
     "jsonwebtoken": "^9.0.0",
     "jwt-check-expiration": "^1.0.5",
     "jwt-decode": "^3.1.2",
+    "moment": "^2.30.1",
     "mongoose": "^6.8.2",
+    "morgan": "^1.10.0",
     "negotiator": "^0.6.3",
     "nodemon": "^3.0.1",
     "socket.io": "^4.6.1",
-    "unpipe": "^1.0.0"
+    "unpipe": "^1.0.0",
+    "winston": "^3.11.0"
   }
 }
